[gd_scene load_steps=7 format=3 uid="uid://db20u4owrygdr"]

[ext_resource type="PackedScene" uid="uid://couh7uhw2rnod" path="res://Assets/Scenes/Menus/MainMenuBG_Test.tscn" id="1_4fq6n"]
[ext_resource type="Script" uid="uid://cq6aydqejncbx" path="res://Assets/Scripts/Menu/MainMenu.gd" id="1_dvmkf"]
[ext_resource type="FontFile" uid="uid://c8s6bb0hhh008" path="res://Assets/Fonts/nexa-rust/NexaRustHandmade-Extended.otf" id="1_q0tfb"]
[ext_resource type="Theme" uid="uid://bxn7g65qx5rk1" path="res://Assets/Themes/MenuTheme.tres" id="2_dvmkf"]
[ext_resource type="AudioStream" uid="uid://b2mapwkxsf07o" path="res://Assets/Scenes/Audio/ui_click.wav" id="5_u7rcv"]
[ext_resource type="AudioStream" uid="uid://ihy0nx7pwnrx" path="res://Assets/Scenes/Audio/ui_Hover.wav" id="6_8x1ma"]

[node name="MainMenuGUI" type="CanvasLayer"]
script = ExtResource("1_dvmkf")
radius = 2.5
speed = 0.001

[node name="Background" type="Node3D" parent="."]

[node name="gebeude_1" parent="Background" instance=ExtResource("1_4fq6n")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 128.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1280)
render_target_update_mode = 4

[node name="CameraGimbal" type="Node3D" parent="Background/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport/CameraGimbal"]
transform = Transform3D(0.90630776, 0.036833607, -0.4210101, 0, 0.9961947, 0.087155744, 0.42261827, -0.07898992, 0.90285903, -5.4, 8.4, 11)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dvmkf")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource("2_dvmkf")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.19607843)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 18
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("1_q0tfb")
theme_override_font_sizes/font_size = 164
text = "Village The Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 36

[node name="PlayButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_dvmkf")
action_mode = 0
text = "Play"
icon_alignment = 1

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit
"

[node name="UIClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_u7rcv")
volume_db = 14.136

[node name="UIHoverPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8x1ma")

[connection signal="mouse_entered" from="Menu/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="Menu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
